--- a/css/header.css
+++ b/css/header.css
@@ -9,6 +9,16 @@
   right: 0;
   z-index: 1000;
 }
+.burger {
+  display: none;
+}
+
+.bar {
+  height: 6px;
+  width: 100%;
+  background-color: #fff;
+  border-radius: 10px;
+}
 
 .header .logo img {
   height: 6rem;
@@ -29,4 +39,26 @@
   color: var(--main-color);
   border-bottom: 0.1rem solid var(--main-color, #010103);
   padding-bottom: 0.5rem;
+}
+
+@media screen and (max-width: 1170px) {
+  .header {
+    padding-top: 10px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .navbar {
+    display: none;
+  }
+  .burger {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 40px;
+    margin-right: 30px;
+    width: 50px;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+  }
 }
