--- a/css/hero-area.css
+++ b/css/hero-area.css
@@ -1,26 +1,22 @@
 .hero-area {
   display: flex;
   flex-direction: row;
+  background-image: url(../img/hero-area/bg-full.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 .hero-area__left {
   margin: 0;
   border: none;
   width: 40%;
   height: 770px;
-  background-image: url(../img/hero-area/Rectangle\ 60.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 .hero-area__right {
   margin: 0;
   border: none;
   width: 60%;
   height: 770px;
-  background-image: url(../img/hero-area/image.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 .our-gallery--wrapper {
   display: flex;
