--- a/css/follow-us.css
+++ b/css/follow-us.css
@@ -6,3 +6,8 @@
   background-position: center;
   background-size: cover;
 }
+@media screen and (max-width: 450px) {
+  .follow-us {
+    background-position: left;
+  }
+}
