--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,8 @@
 .footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   width: 100vw;
   height: 410px;
   margin-top: 40px;
@@ -6,4 +10,24 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+.footer-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.copyright {
+  width: 100%;
+  height: 50px;
+  margin-top: 40px;
+}
+.copyright p {
+  color: var(--white, #fff);
+  text-align: center;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 25.6px */
 }
