do for section(follow-up and update-news)

--- a/css/follow-us.css
+++ b/css/follow-us.css
@@ -11,3 +11,10 @@
     background-position: left;
   }
 }
+#follow-us{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  color: #FFFFFF;
+}
