--- a/css/footer.css
+++ b/css/footer.css
@@ -1,9 +1,114 @@
 .footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   width: 100vw;
   height: 410px;
+  padding-bottom: 50px;
+  padding-top: 75px;
   margin-top: 40px;
+  padding-left: 160px;
+  padding-right: 160px;
   background-image: url(../img/footer/bg-footer.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+.footer-content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer-content__first {
+  width: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.footer-content__categies {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.footer-content__categies ul {
+  display: flex;
+  flex-direction: column;
+  column-gap: 10px;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.footer-content__categies h3 {
+  color: #fff;
+  font-size: 24px;
+  font-style: normal;
+  margin-bottom: 20px;
+  font-weight: 400;
+  line-height: 150%;
+}
+.footer-content__information {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.footer-content__information ul {
+  display: flex;
+  flex-direction: column;
+  column-gap: 10px;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.footer-content__information h3 {
+  color: #fff;
+  font-family: "Open Sans";
+  font-size: 24px;
+  margin-bottom: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+.footer-content__follow-us {
+  display: flex;
+  flex-direction: column;
+  column-gap: 10px;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.footer-content__follow-us h3 {
+  color: #fff;
+  font-family: "Open Sans";
+  font-size: 24px;
+  margin-bottom: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+.footer-text {
+  color: #fff;
+  text-align: center;
+  font-family: "Open Sans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 27px */
+}
+.copyright {
+  width: 100%;
+  height: 50px;
+  margin-top: 40px;
+}
+.copyright p {
+  color: var(--white, #fff);
+  text-align: center;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 25.6px */
 }
