--- a/css/update-news.css
+++ b/css/update-news.css
@@ -1,17 +1,86 @@
 .update-news {
   padding: 20px;
 }
-#update-news {
+.update-news__wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   flex-direction: column;
 }
+.update-news__wrapper h2 {
+  color: #000;
+  text-align: center;
+  font-family: "Josefin Sans";
+  font-size: 43px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 130%; /* 55.9px */
+}
+.update-news__wrapper p {
+  width: 600px;
+  color: #000;
+  text-align: center;
+  font-family: "Open Sans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 28.8px */
+}
 .area-update-news {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+}
+.update-news__cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 20px;
+}
+.update-news__card {
+  width: 362px;
+  height: 536px;
+  flex-shrink: 0;
+  border-radius: 20px;
+  background: #fff;
+  box-shadow: 40px 15px 136px 0px rgba(0, 0, 0, 0.2);
+}
+.update-news__card--content {
+  padding: 30px;
+}
+.update-news__card--content h3 {
+  color: #000;
+
+  /* Heading / Base */
+  font-family: "Josefin Sans";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 130%; /* 41.6px */
+}
+.update-news__card--content p {
+  width: 302px;
+  color: #000;
+  font-family: "Open Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 25.6px */
+}
+.update-news__card--content button {
+  color: #ff4b32;
+  font-family: "Open Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 160%; /* 25.6px */
+}
+.update-update-news__card--content img {
+  height: 300px;
+  width: 100%;
 }
 .update-img {
   width: 362px;
