sketched styles in the section our-best-offer

--- a/css/our-best-offer.css
+++ b/css/our-best-offer.css
@@ -1,6 +1,6 @@
 .our-best-offer {
   width: 1150px;
-  height: 740px;
+  /* height: 740px; */
   margin-top: 140px;
   display: flex;
   flex-direction: column;
