--- a/css/hero-area.css
+++ b/css/hero-area.css
@@ -78,11 +78,90 @@
   .hero-area__left--content {
     width: 300px;
   }
-
+  .hero-area__left--content {
+    left: 14%;
+  }
   .hero-area__left {
     width: 1%;
   }
   .hero-area__right {
     width: 99%;
   }
+}
+/* modal */
+.show {
+  display: flex;
+}
+.hero-area__orderModal {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: rgba(245, 242, 242, 0.7);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+}
+.hero-area__orderModal--content {
+  width: 80%;
+  height: 500px;
+  padding: 20px;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.hero-area__orderModal--content h4 {
+  font-family: "Open Sans";
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 160%;
+}
+.hero-area__form {
+  position: relative;
+  width: 80%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-area__form input {
+  width: 100%;
+  height: 40px;
+  padding: 4px;
+  margin-top: 20px;
+  border: 1px solid #000;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.hero-area__form button {
+  width: 100%;
+  height: 40px;
+  margin-top: 20px;
+  background: #ff4b32;
+  color: var(--white-color);
+  font-family: "Open Sans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 160%;
+}
+.hero-area__close {
+  position: absolute;
+  top: 50px;
+  right: 21px;
+  font-size: 24px;
+  cursor: pointer;
+}
+.show {
+  display: flex;
 }
