--- a/css/hero-area.css
+++ b/css/hero-area.css
@@ -106,6 +106,7 @@
   z-index: 1000;
 }
 .hero-area__orderModal--content {
+  position: relative;
   width: 80%;
   height: 500px;
   padding: 20px;
@@ -146,6 +147,7 @@
 .hero-area__form button {
   width: 100%;
   height: 40px;
+  border-radius: 5px;
   margin-top: 20px;
   background: #ff4b32;
   color: var(--white-color);
@@ -157,11 +159,93 @@
 }
 .hero-area__close {
   position: absolute;
-  top: 50px;
+  top: 18px;
   right: 21px;
-  font-size: 24px;
+  font-size: 35px;
   cursor: pointer;
 }
 .show {
   display: flex;
+}
+@media screen and (min-width: 768px) {
+  .hero-area__orderModal--content {
+    width: 70%;
+    height: 500px;
+    padding: 30px;
+  }
+  .hero-area__form {
+    width: 90%;
+    height: 28.125rem;
+  }
+  .hero-area__orderModal--content h4 {
+    font-size: 24px;
+    width: 90%;
+    margin-top: 20px;
+    font-weight: 600;
+  }
+  .hero-area__close {
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    font-size: 45px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .hero-area__orderModal--content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 800px;
+    padding: 30px;
+  }
+  .hero-area__form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 80%;
+    height: 450px;
+  }
+  .hero-area__orderModal--content h2 {
+    font-size: 35px;
+    width: 90%;
+    margin-top: 20px;
+    font-weight: 900;
+  }
+  .hero-area__orderModal--content h4 {
+    font-size: 24px;
+    width: 80%;
+    margin-top: 20px;
+    font-weight: 600;
+  }
+  .hero-area__form input {
+    width: 100%;
+    height: 60px;
+    padding: 4px;
+    margin-top: 20px;
+    border: 1px solid #000;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  .hero-area__form button {
+    width: 50%;
+    height: 50px;
+    margin-top: 20px;
+    background: #ff4b32;
+    color: var(--white-color);
+    font-family: "Open Sans";
+    font-size: 18px;
+    margin-top: 30px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 160%;
+  }
+  .hero-area__close {
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    font-size: 45px;
+  }
 }
