--- a/css/header.css
+++ b/css/header.css
@@ -62,3 +62,38 @@
     cursor: pointer;
   }
 }
+
+/* mobile menu */
+.mobile-menu {
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  z-index: 1000;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.mobile-menu a {
+  color: #fff;
+  font-family: "Open Sans";
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 38.4px */
+  margin: 1rem;
+}
+.mobile-menu a:hover {
+  color: var(--main-color);
+}
+.close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 24px;
+  color: #fff;
+  cursor: pointer;
+}
