--- a/css/header.css
+++ b/css/header.css
@@ -55,7 +55,7 @@
     flex-direction: column;
     justify-content: space-around;
     height: 40px;
-    margin-right: 30px;
+    margin-right: 10px;
     width: 50px;
     background: transparent;
     border: none;
@@ -64,6 +64,9 @@
 }
 
 /* mobile menu */
+.mobMenu {
+  display: none;
+}
 .mobile-menu {
   display: flex;
   position: fixed;
@@ -96,4 +99,7 @@
   font-size: 24px;
   color: #fff;
   cursor: pointer;
+}
+.open {
+  display: flex;
 }
