--- a/css/footer.css
+++ b/css/footer.css
@@ -139,4 +139,10 @@
     justify-content: center;
     align-items: center;
   }
+  .footer-content__social h3 {
+    display: none;
+  }
+  .footer-content__social ul {
+    margin-top: 100px;
+  }
 }
