--- a/css/update-news.css
+++ b/css/update-news.css
@@ -13,6 +13,7 @@
   text-align: center;
   font-family: "Josefin Sans";
   font-size: 43px;
+  margin-top: 150px;
   font-style: normal;
   font-weight: 600;
   line-height: 130%; /* 55.9px */
@@ -23,6 +24,7 @@
   text-align: center;
   font-family: "Open Sans";
   font-size: 18px;
+  margin-bottom: 60px;
   font-style: normal;
   font-weight: 400;
   line-height: 160%; /* 28.8px */
