--- a/css/follow-us.css
+++ b/css/follow-us.css
@@ -37,13 +37,13 @@
 .follow-us__content p {
   color: #fff;
   text-align: center;
-
-  /* Subtitle / Base */
   font-family: "Josefin Sans";
   font-size: 43px;
+  margin-top: 65px;
+  margin-bottom: 60px;
   font-style: normal;
   font-weight: 600;
-  line-height: 130%; /* 55.9px */
+  line-height: 130%;
 }
 .follow-us__content ul {
   display: flex;
@@ -55,24 +55,31 @@
 .follow-us__content--mail {
   color: #fff;
   text-align: center;
-
-  /* Subheading / Base */
   font-family: "Open Sans";
   font-size: 24px;
   font-style: normal;
   font-weight: 400;
-  line-height: 150%; /* 36px */
+  line-height: 150%;
+}
+.follow-us__content--mail::before {
+  content: url(../img/follow-us/gmaillogo.svg);
+  margin-right: 8px;
 }
 .follow-us__content--phone {
+  position: relative;
   color: #fff;
   text-align: center;
-
-  /* Subheading / Base */
   font-family: "Open Sans";
   font-size: 24px;
   font-style: normal;
   font-weight: 400;
-  line-height: 150%; /* 36px */
+  line-height: 150%;
+}
+.follow-us__content--phone::before {
+  content: url(../img/follow-us/Telephone.svg);
+  position: absolute;
+  top: 4px;
+  left: 510px;
 }
 .follow-us__social {
   padding-top: 60px;
@@ -82,4 +89,16 @@
   flex-direction: row;
   justify-content: center;
   gap: 20px;
+}
+@media screen and (max-width: 768px) {
+  .follow-us__content--phone::before {
+    top: 4px;
+    left: 177px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .follow-us__content--phone::before {
+    top: 4px;
+    left: -3px;
+  }
 }
