--- a/css/our-best-offer.css
+++ b/css/our-best-offer.css
@@ -41,6 +41,7 @@
   height: 100%;
 }
 .our-best-offer__card {
+  position: relative;
   width: 350px;
   height: auto;
   display: flex;
@@ -116,4 +117,62 @@
   }
 }
 @media screen and (max-width: 450px) {
+}
+
+/* card detail */
+
+.card-detail {
+  display: none;
+}
+.card-detail h4 {
+  color: #000;
+  font-family: "Josefin Sans";
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 130%; /* 31.2px */
+  letter-spacing: 3.6px;
+}
+.card-detail p {
+  margin-top: 20px;
+  color: #000;
+  font-family: "Open Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%;
+  opacity: 0.7;
+}
+.card-detail button {
+  width: 100%;
+  height: 50px;
+  background-color: #000;
+  color: #fff;
+  font-family: "Open Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 160%;
+  letter-spacing: 1.6px;
+  border: none;
+  border-radius: 5px;
+  margin-top: 170px;
+  cursor: pointer;
+}
+
+.show-card {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  padding: 20px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #b3e9f0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
