--- a/css/our-best-offer.css
+++ b/css/our-best-offer.css
@@ -156,7 +156,7 @@
   letter-spacing: 1.6px;
   border: none;
   border-radius: 5px;
-  margin-top: 170px;
+  margin-top: auto;
   cursor: pointer;
 }
 
