--- a/css/follow-us.css
+++ b/css/follow-us.css
@@ -63,7 +63,7 @@
   line-height: 150%;
 }
 .follow-us__content--mail::before {
-  content: url(../img/follow-us/gmaillogo.svg);
+  content: url(../img/follow-us/Telephone.svg);
   margin-right: 8px;
 }
 .follow-us__content--phone {
@@ -77,10 +77,10 @@
   line-height: 150%;
 }
 .follow-us__content--phone::before {
-  content: url(../img/follow-us/Telephone.svg);
+  content: url(../img/follow-us/gmaillogo.svg);
   position: absolute;
-  top: 4px;
-  left: 510px;
+  top: 0;
+  left: 517px;
 }
 .follow-us__social {
   padding-top: 60px;
@@ -93,13 +93,11 @@
 }
 @media screen and (max-width: 768px) {
   .follow-us__content--phone::before {
-    top: 4px;
-    left: 177px;
+    left: 184px;
   }
 }
 @media screen and (max-width: 450px) {
   .follow-us__content--phone::before {
-    top: 4px;
-    left: -3px;
+    left: 2px;
   }
 }
