--- a/css/hero-area.css
+++ b/css/hero-area.css
@@ -143,7 +143,15 @@
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-
+.hero-area__textarea {
+  width: 100%;
+  height: 100px;
+  padding: 4px;
+  margin-top: 20px;
+  border: 1px solid #000;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 .hero-area__form button {
   width: 100%;
   height: 40px;
