--- a/css/our-best-offer.css
+++ b/css/our-best-offer.css
@@ -1,6 +1,5 @@
 .our-best-offer {
   width: 100%;
-  /* height: 740px; */
   margin-top: 140px;
   display: flex;
   flex-direction: column;
@@ -18,6 +17,7 @@
   font-family: "Josefin Sans";
   font-size: 43px;
   font-style: normal;
+  margin-left: 50px;
   font-weight: 600;
   line-height: 130%; /* 55.9px */
   letter-spacing: 6.45px;
@@ -27,6 +27,7 @@
   color: #000;
   font-family: "Open Sans";
   font-size: 18px;
+  margin-left: 50px;
   font-style: normal;
   font-weight: 400;
   line-height: 160%;
@@ -35,7 +36,7 @@
 .our-best-offer__cards {
   display: flex;
   margin-top: 60px;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   width: 100%;
   height: 100%;
