added some styles

--- a/css/our-gallery.css
+++ b/css/our-gallery.css
@@ -6,8 +6,7 @@
   gap: 20px;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1.2fr 0.8fr;
-  margin: 50px auto;
-  margin-bottom: 0;
+  margin: 50px auto 0;
 }
 .image-slider__wrapper {
   display: flex;
@@ -19,8 +18,7 @@
   color: #000;
   text-align: center;
   margin-top: 130px;
-  /* Subtitle / Base */
-  font-family: "Josefin Sans";
+  font-family: "Josefin Sans", sans-serif;
   font-size: 43px;
   font-style: normal;
   font-weight: 600;
@@ -29,7 +27,7 @@
 .our-gallery--wrapper p {
   color: #000;
   text-align: center;
-  font-family: "Open Sans";
+  font-family: "Open Sans", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -42,7 +40,7 @@
   height: 27px;
   color: #ff4b32;
   text-align: center;
-  font-family: "Open Sans";
+  font-family: "Open Sans", sans-serif;
   font-size: 18px;
   margin-bottom: 143px;
   margin-top: 75px;
@@ -98,9 +96,65 @@
 }
 
 /* slider */
+.gallery-wrap {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: #f0f0f0;
+}
+
+
+.slider {
+  width: 800px;
+  height: 300px;
+  overflow: hidden;
+  position: relative;
+}
+
+.slides {
+  width: 3200px; /* Общая ширина всех слайдов */
+  display: flex;
+  animation: slide-animation 16s infinite;
+}
+
+.slide {
+  width: 800px;
+  flex-shrink: 0;
+  transition: transform 1s ease;
+}
+
+.slide img {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+@keyframes slide-animation {
+  0%, 20% {
+    transform: translateX(0%);
+  }
+  25%, 45% {
+    transform: translateX(-25%);
+  }
+  50%, 70% {
+    transform: translateX(-50%);
+  }
+  75%, 95% {
+    transform: translateX(-75%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+
+/*===================*/
 
 .slide-wrapper {
-  border: 1px solid #000;
+  /*border: 1px solid #000;*/
 }
 .our-gallery-slider {
   display: none;
@@ -113,12 +167,11 @@
   color: #000;
   text-align: center;
   margin-top: 30px;
-  /* Subtitle / Base */
-  font-family: "Josefin Sans";
+  font-family: "Josefin Sans", sans-serif;
   font-size: 43px;
   font-style: normal;
   font-weight: 600;
-  line-height: 130%; /* 55.9px */
+  line-height: 130%;
 }
 .swiper-slide img {
   max-width: 100%;
