--- a/css/our-best-offer.css
+++ b/css/our-best-offer.css
@@ -19,7 +19,7 @@
   font-style: normal;
   margin-left: 50px;
   font-weight: 600;
-  line-height: 130%; /* 55.9px */
+  line-height: 130%;
   letter-spacing: 6.45px;
 }
 .our-best-offer__content p {
@@ -124,13 +124,11 @@
     margin-left: 0;
   }
   .our-best-offer__content h2 {
-     margin-left: 0;
-     width: 100%;
-   }
-
+    margin-left: 0;
+    width: 100%;
+  }
 }
 @media screen and (max-width: 450px) {
-
 }
 .card-detail {
   display: none;
