--- a/css/our-best-offer.css
+++ b/css/our-best-offer.css
@@ -60,7 +60,7 @@
   font-size: 24px;
   font-style: normal;
   font-weight: 700;
-  line-height: 150%; /* 36px */
+  line-height: 150%;
 }
 .our-best-offer__card span::before {
   content: url("../img/our-best-offer/$.svg");
@@ -73,7 +73,7 @@
   font-size: 24px;
   font-style: normal;
   font-weight: 600;
-  line-height: 130%; /* 31.2px */
+  line-height: 130%;
   letter-spacing: 3.6px;
 }
 .our-best-offer__card p {
@@ -124,13 +124,14 @@
     margin-left: 0;
   }
   .our-best-offer__content h2 {
-     margin-left: 0;
-     width: 100%;
-   }
-
+    margin-left: 0;
+    width: 100%;
+  }
 }
 @media screen and (max-width: 450px) {
-
+  .our-best-offer {
+    margin-top: 40px;
+  }
 }
 .card-detail {
   display: none;
